k8s/collaborator-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collaborator-service
  namespace: microservices-app
  labels:
    app: collaborator-service
spec:
  selector:
    app: collaborator-service
  ports:
  - name: http
    protocol: TCP
    port: 8002
    targetPort: 8002
  type: ClusterIP
